Mon Nov 22 19:57:23 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:

          Added checks for failure to open a file or to create
          an absolute file pathname. Most of these checks are
          in code that is specific to VMS.

Mon Nov 22 11:31:10 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/Valuetype/AbstractBase.h:
        * tao/Valuetype/AbstractBase.cpp:
        * tao/Valuetype/AbstractBase.inl:
        * tao/Valuetype/AbstractBase_T.cpp:
          Fixed a leak described in bug#3879. Also refactored the AbstractBase
          code so that it become simpler and more standard compliant.

        * tao/Synch_Invocation.cpp:
        * bin/tao_orb_tests.lst:
          Fixed the bug#3926 and marked the test as fixed.

        * tests/Abstract_Interface/client.cpp:
          Fixed in this test output to screen.

Mon Nov 22 10:09:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
          Small cleanup and tweaks to traits

Sat Nov 20 17:26:21 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * tests/Abstract_Interface/client.cpp:
        * tests/Abstract_Interface/test.idl:
        * tests/Abstract_Interface/test_i.h:
        * tests/Abstract_Interface/test_i.cpp:
          Added test for extraction of null abstract interface.

Sat Nov 20 15:34:50 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * tao/Valuetype/AbstractBase.cpp:
          Fixed missing support for extraction of null object ref for
          abstract interface.

Fri Nov 19 19:12:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
          Changed generation of DDS_TYPE traits

Fri Nov 19 17:50:57 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:
